[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/telaVitoria.gd" type="Script" id=1]
[ext_resource path="res://Sprits/botoes/tela1.png" type="Texture" id=2]
[ext_resource path="res://Sprits/puxar1.png" type="Texture" id=3]
[ext_resource path="res://Sprits/puxar2.png" type="Texture" id=4]
[ext_resource path="res://Sprits/botoes/menu.png" type="Texture" id=5]
[ext_resource path="res://Sprits/botaoretangulo.png" type="Texture" id=6]
[ext_resource path="res://Sprits/botaoretangulo2.png" type="Texture" id=7]
[ext_resource path="res://Sprits/botoes/reiniciar.png" type="Texture" id=8]
[ext_resource path="res://Sprits/botoes/seguir.png" type="Texture" id=9]
[ext_resource path="res://Sprits/botoes/estrela_AP.png" type="Texture" id=10]
[ext_resource path="res://fontes/font160.font" type="BitmapFont" id=11]
[ext_resource path="res://Sprits/botoes/PARABÉNS.png" type="Texture" id=12]
[ext_resource path="res://Sprits/botoes/VOÇÊ.png" type="Texture" id=13]
[ext_resource path="res://Sprits/botoes/DE NÍVEL.png" type="Texture" id=14]

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("proxNivel:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 719.614, 524.299 ), Vector2( 719.614, 1159.26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("proxNivel:rotation_degrees")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Estrela1:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 434.665, 411.187 ), Vector2( 434.665, 1046.15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Estrela1:rotation_degrees")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("proxNivel/Sprite:position")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 43.1302, 21.7104 ), Vector2( 43.1302, 21.7104 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("proxNivel/Sprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 303.231, 212.554 ), Vector2( 303.231, 847.52 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Menu/Menu:position")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 37.612, 37.641 ), Vector2( 37.612, 37.641 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Menu/Menu:rotation_degrees")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Reiniciar:position")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 419.985, 524.299 ), Vector2( 419.985, 1159.26 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Reiniciar:rotation_degrees")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Reiniciar/Sprite:position")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42.4425, 20.9951 ), Vector2( 42.4425, 20.9951 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Reiniciar/Sprite:rotation_degrees")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Estrela2:position")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 593.062, 375.811 ), Vector2( 593.062, 1010.78 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Estrela2:rotation_degrees")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Estrela3:position")
tracks/16/interp = 1
tracks/16/imported = false
tracks/16/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 732.783, 410.79 ), Vector2( 732.783, 1045.76 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Estrela3:rotation_degrees")
tracks/17/interp = 1
tracks/17/imported = false
tracks/17/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Menu:position")
tracks/18/interp = 1
tracks/18/imported = false
tracks/18/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 269.146, 169.131 ), Vector2( 269.146, 804.097 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Menu:rotation_degrees")
tracks/19/interp = 1
tracks/19/imported = false
tracks/19/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 303.231, -487.246 ), Vector2( 303.231, 212.554 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 269.146, -530.669 ), Vector2( 269.146, 169.131 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu:rotation_degrees")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Reiniciar:position")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 419.985, -175.501 ), Vector2( 419.985, 524.299 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Reiniciar:rotation_degrees")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("proxNivel:position")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 719.614, -175.501 ), Vector2( 719.614, 524.299 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("proxNivel:rotation_degrees")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Estrela1:position")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 434.665, -288.613 ), Vector2( 434.665, 411.187 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Estrela1:rotation_degrees")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("proxNivel/Sprite:position")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 43.1302, 21.7104 ), Vector2( 43.1302, 21.7104 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("proxNivel/Sprite:rotation_degrees")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Reiniciar/Sprite:position")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42.4425, 20.9951 ), Vector2( 42.4425, 20.9951 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Reiniciar/Sprite:rotation_degrees")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Menu/Menu:position")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 37.612, 37.641 ), Vector2( 37.612, 37.641 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Menu/Menu:rotation_degrees")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Estrela2:position")
tracks/16/interp = 1
tracks/16/imported = false
tracks/16/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 593.062, -323.989 ), Vector2( 593.062, 375.811 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Estrela2:rotation_degrees")
tracks/17/interp = 1
tracks/17/imported = false
tracks/17/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Estrela3:position")
tracks/18/interp = 1
tracks/18/imported = false
tracks/18/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 732.783, -289.01 ), Vector2( 732.783, 410.79 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Estrela3:rotation_degrees")
tracks/19/interp = 1
tracks/19/imported = false
tracks/19/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="telaVitoria" type="Node2D"]

pause_mode = 2
z_index = 20
script = ExtResource( 1 )

[node name="ColorFrame" type="ColorRect" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = -11.0
margin_top = -15.0
margin_right = 1295.0
margin_bottom = 734.0
color = Color( 0, 0, 0, 0.470588 )
mouse_filter = 0

[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 303.231, 212.554 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 1, 1, 1, 0.470588 )

[node name="Menu" type="TouchScreenButton" parent="."]

editor/display_folded = true
position = Vector2( 269.146, 169.131 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Menu" type="Sprite" parent="Menu"]

position = Vector2( 37.612, 37.641 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="Reiniciar" type="TouchScreenButton" parent="."]

position = Vector2( 427.985, 524.299 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Reiniciar"]

position = Vector2( 42.4425, 20.9951 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )

[node name="proxNivel" type="TouchScreenButton" parent="."]

position = Vector2( 736.614, 524.299 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="proxNivel"]

position = Vector2( 43.1302, 21.7104 )
scale = Vector2( 0.5, 0.3 )
texture = ExtResource( 9 )

[node name="Estrela1" type="Sprite" parent="."]

visible = false
position = Vector2( 434.665, 411.187 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
centered = false

[node name="Estrela2" type="Sprite" parent="."]

visible = false
position = Vector2( 593.062, 375.811 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
centered = false

[node name="Estrela3" type="Sprite" parent="."]

visible = false
position = Vector2( 732.783, 410.79 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
centered = false

[node name="tela1" type="Sprite" parent="."]

position = Vector2( 641.532, 423.99 )
scale = Vector2( 0.597959, 0.36694 )
texture = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Hide = SubResource( 2 )
anims/Show = SubResource( 3 )
playback_active = true
playback_speed = 1.0
blend_times = [  ]
autoplay = "Show"

[node name="RichTextLabel" type="RichTextLabel" parent="."]

visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 80.0
margin_top = 358.0
margin_right = 1351.0
margin_bottom = 541.0
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = false
bbcode_text = "PARABÉNS!!"
visible_characters = -1
percent_visible = 1.0
mouse_filter = 0

[node name="PARABÉNS" type="Sprite" parent="."]

position = Vector2( 645.284, 278.363 )
scale = Vector2( 0.553061, 0.553061 )
texture = ExtResource( 12 )

[node name="VOÇÊ" type="Sprite" parent="."]

position = Vector2( 534.073, 397.025 )
scale = Vector2( 0.369156, 0.310042 )
texture = ExtResource( 13 )

[node name="DE NÍVEL" type="Sprite" parent="."]

position = Vector2( 648.815, 448.59 )
scale = Vector2( 0.628252, 0.291452 )
texture = ExtResource( 14 )

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed" binds=[  ]]

[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed" binds=[  ]]

[connection signal="pressed" from="proxNivel" to="." method="_on_proxNivel_pressed" binds=[  ]]
